# DIPLab_CSKMITL

Code/: CMakeLists.txt  Main.cpp
Code/src/: ImageManager.cpp  ImageManager.h  pch.h
Lab3/: CMakeLists.txt  Main.cpp
Lab3/src/: ImageManager.cpp  ImageManager.h
Lab4/: CMakeLists.txt  Main.cpp
Lab4/src/: ImageManager.cpp  ImageManager.h
Lab5/: CMakeLists.txt  Main.cpp
Lab5/src/: FrequencyDomainManager.cpp  FrequencyDomainManager.h  ImageManager.cpp  ImageManager.h  pch.h
Lab5_Db/Lab5_Db/: main.cpp
Lab5_Db/Lab5_Db.xcodeproj/: project.pbxproj
Lab5_Db/Lab5_Db.xcodeproj/project.xcworkspace/xcuserdata/bankzkuma.xcuserdatad/: UserInterfaceState.xcuserstate
Lab5_Db/Lab5_Db.xcodeproj/xcuserdata/bankzkuma.xcuserdatad/xcschemes/: xcschememanagement.plist
Lab6/: CMakeLists.txt  Main.cpp
Lab6/src/: ImageManager.cpp  ImageManager.h  pch.h
Lab7/: CMakeLists.txt  Main.cpp
Lab7/src/: FrequencyDomainManager.cpp  ImageManager.cpp  ImageManager.h
Midterm/: CMakeLists.txt  Main.cpp
Midterm/src/: ImageManager.cpp  ImageManager.h  pch.h
